Migrated tests from Hamcrest to Truth asserts
Truth allows for the test cases to be more succinct and behavioral by
simplifying the assertion statement. Instead of nested matchers, the
custom subjects provide addition assert methods. This makes the intent
of the check more obvious. The custom validations, like our extensive
consistency checks, fit naturally into Truth's extensions. They felt
awkward as Hamcrest matchers or were pulled out into ad hoc
validation routines.