@@ -15,15 +15,11 @@
  */
 package com.github.benmanes.caffeine.jcache.event;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
+import static com.google.common.truth.Truth.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -32,7 +28,6 @@ import javax.cache.configuration.MutableCacheEntryListenerConfiguration;
 import javax.cache.event.CacheEntryCreatedListener;
 import javax.cache.event.CacheEntryEventFilter;
 import javax.cache.event.CacheEntryExpiredListener;
-import javax.cache.event.CacheEntryListener;
 import javax.cache.event.CacheEntryRemovedListener;
 import javax.cache.event.CacheEntryUpdatedListener;
 
@@ -41,8 +36,6 @@ import org.mockito.MockitoAnnotations;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
-
-import com.google.common.util.concurrent.MoreExecutors;
 
 /**
  * @author ben.manes@gmail.com (Ben Manes)
@@ -53,39 +46,37 @@ public final class EventDispatcherTest {
   @Mock CacheEntryUpdatedListener<Integer, Integer> updatedListener;
   @Mock CacheEntryRemovedListener<Integer, Integer> removedListener;
   @Mock CacheEntryExpiredListener<Integer, Integer> expiredListener;
-  AutoCloseable mocks;
 
   CacheEntryEventFilter<Integer, Integer> allowFilter = event -> true;
   CacheEntryEventFilter<Integer, Integer> rejectFilter = event -> false;
   EventDispatcher<Integer, Integer> dispatcher;
 
   @BeforeMethod
-  public void before() {
-    mocks = MockitoAnnotations.openMocks(this);
-    dispatcher = new EventDispatcher<>(MoreExecutors.directExecutor());
+  public void before() throws Exception {
+    MockitoAnnotations.openMocks(this).close();
+    dispatcher = new EventDispatcher<>(Runnable::run);
   }
 
   @AfterMethod
   public void after() throws Exception {
     dispatcher.ignoreSynchronous();
-    mocks.close();
   }
 
   @Test
   public void register_noListener() {
-    MutableCacheEntryListenerConfiguration<Integer, Integer> configuration =
-        new MutableCacheEntryListenerConfiguration<>(null, null, false, false);
+    var configuration =
+        new MutableCacheEntryListenerConfiguration<Integer, Integer>(null, null, false, false);
     dispatcher.register(configuration);
-    assertThat(dispatcher.dispatchQueues.keySet(), is(empty()));
+    assertThat(dispatcher.dispatchQueues.keySet()).isEmpty();
   }
 
   @Test
   public void deregister() {
-    MutableCacheEntryListenerConfiguration<Integer, Integer> configuration =
-        new MutableCacheEntryListenerConfiguration<>(() -> createdListener, null, false, false);
+    var configuration = new MutableCacheEntryListenerConfiguration<>(
+        () -> createdListener, null, false, false);
     dispatcher.register(configuration);
     dispatcher.deregister(configuration);
-    assertThat(dispatcher.dispatchQueues.keySet(), is(empty()));
+    assertThat(dispatcher.dispatchQueues.keySet()).isEmpty();
   }
 
   @Test
@@ -93,7 +84,7 @@ public final class EventDispatcherTest {
     registerAll();
     dispatcher.publishCreated(cache, 1, 2);
     verify(createdListener, times(4)).onCreated(any());
-    assertThat(EventDispatcher.pending.get(), hasSize(2));
+    assertThat(EventDispatcher.pending.get()).hasSize(2);
   }
 
   @Test
@@ -101,7 +92,7 @@ public final class EventDispatcherTest {
     registerAll();
     dispatcher.publishUpdated(cache, 1, 2, 3);
     verify(updatedListener, times(4)).onUpdated(any());
-    assertThat(EventDispatcher.pending.get(), hasSize(2));
+    assertThat(EventDispatcher.pending.get()).hasSize(2);
   }
 
   @Test
@@ -109,7 +100,7 @@ public final class EventDispatcherTest {
     registerAll();
     dispatcher.publishRemoved(cache, 1, 2);
     verify(removedListener, times(4)).onRemoved(any());
-    assertThat(EventDispatcher.pending.get(), hasSize(2));
+    assertThat(EventDispatcher.pending.get()).hasSize(2);
   }
 
   @Test
@@ -117,7 +108,7 @@ public final class EventDispatcherTest {
     registerAll();
     dispatcher.publishExpired(cache, 1, 2);
     verify(expiredListener, times(4)).onExpired(any());
-    assertThat(EventDispatcher.pending.get(), hasSize(2));
+    assertThat(EventDispatcher.pending.get()).hasSize(2);
   }
 
   @Test(threadPoolSize = 5, invocationCount = 25)
@@ -132,23 +123,23 @@ public final class EventDispatcherTest {
   public void awaitSynchronous() {
     EventDispatcher.pending.get().add(CompletableFuture.completedFuture(null));
     dispatcher.awaitSynchronous();
-    assertThat(EventDispatcher.pending.get(), is(empty()));
+    assertThat(EventDispatcher.pending.get()).isEmpty();
   }
 
   @Test
   public void awaitSynchronous_failure() {
-    CompletableFuture<Void> future = new CompletableFuture<>();
+    var future = new CompletableFuture<Void>();
     future.completeExceptionally(new RuntimeException());
     EventDispatcher.pending.get().add(future);
     dispatcher.awaitSynchronous();
-    assertThat(EventDispatcher.pending.get(), is(empty()));
+    assertThat(EventDispatcher.pending.get()).isEmpty();
   }
 
   @Test
   public void ignoreSynchronous() {
     EventDispatcher.pending.get().add(CompletableFuture.completedFuture(null));
     dispatcher.ignoreSynchronous();
-    assertThat(EventDispatcher.pending.get(), is(empty()));
+    assertThat(EventDispatcher.pending.get()).isEmpty();
   }
 
   /**
@@ -158,10 +149,9 @@ public final class EventDispatcherTest {
    * 2 are synchronous.
    */
   private void registerAll() {
-    List<CacheEntryListener<Integer, Integer>> listeners = Arrays.asList(
-        createdListener, updatedListener, removedListener, expiredListener);
-    for (CacheEntryListener<Integer, Integer> listener : listeners) {
-      for (boolean synchronous : Arrays.asList(true, false)) {
+    var listeners = List.of(createdListener, updatedListener, removedListener, expiredListener);
+    for (var listener : listeners) {
+      for (boolean synchronous : List.of(true, false)) {
         dispatcher.register(new MutableCacheEntryListenerConfiguration<>(
             () -> listener, null, false, synchronous));
         dispatcher.register(new MutableCacheEntryListenerConfiguration<>(
